--- a/Assignment/8OverseasBranchA.html
+++ b/Assignment/8OverseasBranchA.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>NM Developers</title>
-</head>
-<body>
-  <h1>NM Developers</h1>
-  <h2>Overseas Branch</h2>
-  <p>Welcome to the British Web Server</p>
-  <hr width = 50%>
+    <head>
+        <meta charset="UTF-8" />
+        <title>NM Developers</title>
+    </head>
+    <body>
+        <h1>NM Developers</h1>
+        <h2>Overseas Branch</h2>
+        <p>Welcome to the British Web Server</p>
+        <hr width="50%" />
 
-  <h2>About our Company ...</h2>
-  <p>This Web site provides clients, customers, interested parties and our staff with all of the information that they could want on our products, services, success and failures.</p>
-  <hr>
-  
-  <h3>Products</h3>
-  <p align = center>We are probably the largest supplier of custom widgets, custom widgets, bits and pieces of games in India and here in the European Utuon.</p>
-  <hr width = 50%>
-</body>
+        <h2>About our Company ...</h2>
+        <p>
+            This Web site provides clients, customers, interested parties and
+            our staff with all of the information that they could want on our
+            products, services, success and failures.
+        </p>
+        <hr />
+
+        <h3>Products</h3>
+        <p align="center">
+            We are probably the largest supplier of custom widgets, custom
+            widgets, bits and pieces of games in India and here in the European
+            Utuon.
+        </p>
+        <hr width="50%" />
+    </body>
 </html>
