--- a/JS(var operations).html
+++ b/JS(var operations).html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
-        var x, y, z, result;
-        var xval, yval, zval;
+            var x, y, z, result;
+            var xval, yval, zval;
 
-        xval = window.prompt("Enter first integer");
-        yval = window.prompt("Enter second integer");
-        zval = window.prompt("Enter third integer");
+            xval = window.prompt("Enter first integer");
+            yval = window.prompt("Enter second integer");
+            zval = window.prompt("Enter third integer");
 
-        x= parseInt(xval);
-        y= parseInt(yval);
-        z= parseInt(zval);
+            x = parseInt(xval);
+            y = parseInt(yval);
+            z = parseInt(zval);
 
-        result = x*y*z;
+            result = x * y * z;
 
-        document.writeln("<h1>The product is "+ result);
+            document.writeln("<h1>The product is " + result);
         </script>
     </head>
     <body></body>
