--- a/JS_fontsize.html
+++ b/JS_fontsize.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
-            var counter=10;
-            while(counter<=15)
-            {
-                document.writeln("<p style = 'font-size:" + counter + "px;'>VI☕<p>");
+            var counter = 10;
+            while (counter <= 15) {
+                document.writeln(
+                    "<p style = 'font-size:" + counter + "px;'>VI☕<p>"
+                );
                 counter++;
             }
         </script>
