--- a/JS_form.html
+++ b/JS_form.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
-            function add(){
+            function add() {
                 first = parseInt(document.getElementById("first").value);
                 second = parseInt(document.getElementById("second").value);
                 sum = first + second;
@@ -14,9 +14,9 @@
         </script>
     </head>
     <body>
-        <p>First number: <input type="number" id="first"></p>
-        <p>Second number: <input type="number" id="second"></p>
-        <button on click = "add()"> Add </button>
-        <p> sum : <input id = "result"></p>
+        <p>First number: <input type="number" id="first" /></p>
+        <p>Second number: <input type="number" id="second" /></p>
+        <button on click="add()">Add</button>
+        <p>sum : <input id="result" /></p>
     </body>
 </html>
