--- a/JS_if_else.html
+++ b/JS_if_else.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
-    var percent;
-    percent = window.prompt("Enter %");
-    if(percent >= 90)
-    grade = "A";
-    else if (percent >= 75)
-    grade = "B";
-    else if (percent >= 60)
-    grade = "C";
-    else if (percent >= 50)
-    grade = "D";
-    else if (percent >= 40)
-    grade = "E";
-    else
-    grade = "F";
-        document.writeln("<h1>Your grade is: "+ grade + "</h1>");
+            var percent;
+            percent = window.prompt("Enter %");
+            if (percent >= 90) grade = "A";
+            else if (percent >= 75) grade = "B";
+            else if (percent >= 60) grade = "C";
+            else if (percent >= 50) grade = "D";
+            else if (percent >= 40) grade = "E";
+            else grade = "F";
+            document.writeln("<h1>Your grade is: " + grade + "</h1>");
         </script>
     </head>
     <body></body>
