--- a/borders.html
+++ b/borders.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>HTML continues</title>
     BORDERS
     <style type="text/css">
@@ -9,59 +9,79 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             border-width: 5px;
         }
-        .thick {border-width: thick;
-                border-style: dashed;        
+        .thick {
+            border-width: thick;
+            border-style: dashed;
         }
-        .medium {border-width: medium;
-            border-style: dashed;        
+        .medium {
+            border-width: medium;
+            border-style: dashed;
         }
-        .thin {border-width: thin;
-            border-style: dashed;        
+        .thin {
+            border-width: thin;
+            border-style: dashed;
         }
-        .solid {border-style: solid;}
-        .double {border-style: double;}
-        .groove {border-style: groove;}
-        .ridge {border-style: ridge;}
-        .dotted {border-style: dotted;}
-        .inset {border-style: inset;}
-        .outset {border-style: outset;}
-        .dashed {border-style: dashed;}
-        .red {  border-color: red;
-                border-style: dashed;
-                border-width: medium;}
-        .blue { border-color: blue;
-                border-style: dashed;
-                border-width: medium;}
+        .solid {
+            border-style: solid;
+        }
+        .double {
+            border-style: double;
+        }
+        .groove {
+            border-style: groove;
+        }
+        .ridge {
+            border-style: ridge;
+        }
+        .dotted {
+            border-style: dotted;
+        }
+        .inset {
+            border-style: inset;
+        }
+        .outset {
+            border-style: outset;
+        }
+        .dashed {
+            border-style: dashed;
+        }
+        .red {
+            border-color: red;
+            border-style: dashed;
+            border-width: medium;
+        }
+        .blue {
+            border-color: blue;
+            border-style: dashed;
+            border-width: medium;
+        }
     </style>
 </head>
 <body>
     <div class="thick">THICK BORDER</div>
-    <hr>
+    <hr />
     <div class="medium">MEDIUM BORDER</div>
-    <hr>
+    <hr />
     <div class="thin">THIN BORDER</div>
-    <hr>
+    <hr />
     <div class="solid">SOLID BORDER</div>
-    <hr>
+    <hr />
     <div class="double">DOUBLE BORDER</div>
-    <hr>
+    <hr />
     <div class="groove">GROOVE BORDER</div>
-    <hr>
+    <hr />
     <div class="ridge">RIDGE BORDER</div>
-    <hr>
+    <hr />
     <div class="dotted">DOTTED BORDER</div>
-    <hr>
+    <hr />
     <div class="inset">INSET BORDER</div>
-    <hr>
+    <hr />
     <div class="outset">OUTSET BORDER</div>
-    <hr>
+    <hr />
     <div class="dashed">DASHED BORDER</div>
-    <hr>
+    <hr />
     <div class="red">RED BORDER</div>
-    <hr>
+    <hr />
     <div class="blue">BLUE BORDER</div>
-    <hr>
-
-    
-    
+    <hr />
 </body>
