--- a/mediatypes.html
+++ b/mediatypes.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Meidia Styles</title>
         <style>
-            @media all
-            {
-                h1 {font-family: Verdana, Geneva, Tahoma, sans-serif;}
-                p {font-size: 12pt;
-                color: white;
-                font-family: Arial, Helvetica, sans-serif;}
+            @media all {
+                h1 {
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                }
+                p {
+                    font-size: 12pt;
+                    color: white;
+                    font-family: Arial, Helvetica, sans-serif;
+                }
             }
-            @media print
-            {
+            @media print {
             }
-            body {font-family: Arial, Helvetica, sans-serif;}
-            nav {text-decoration: dotted;
-                border: 2em;}
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            nav {
+                text-decoration: dotted;
+                border: 2em;
+            }
             nav ul {
                 display: none;
                 list-style: none;
                 margin: 0;
                 padding: 0;
             }
-            nav:hover ul {display: block;}
+            nav:hover ul {
+                display: block;
+            }
             nav ul li {
                 border-top: border top 2px solid royalblue;
                 background-color: white;
                 width: 10em;
                 color: black;
             }
-            nav ul li:hover {background-color: red;
-                            text-decoration: none;}
+            nav ul li:hover {
+                background-color: red;
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
         <h1>Navigation Menu</h1>
-        <nav>Menu
-                <ul>
+        <nav>
+            Menu
+            <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Class</a></li>
                 <li><a href="#">Hello</a></li>
                 <li><a href="#">WOW</a></li>
                 <li><a href="#">OMG</a></li>
-                </ul>
+            </ul>
         </nav>
     </body>
 </html>
