--- a/transition.html
+++ b/transition.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Transition</title>
-    <style>
-        div{
-            transition: width 4s;
-        }
-        img:hover{
-            -webkit-transform: rotate(360deg) scale(2,2);
-            -o-transform:  rotate(360deg) scale(2,2);
-            transform: rotate(360deg) scale(2,2);
-        }
-        div:hover{
-            width: 5000px;
-        }
-    </style>
+        <style>
+            div {
+                transition: width 4s;
+            }
+            img:hover {
+                -webkit-transform: rotate(360deg) scale(2, 2);
+                -o-transform: rotate(360deg) scale(2, 2);
+                transform: rotate(360deg) scale(2, 2);
+            }
+            div:hover {
+                width: 5000px;
+            }
+        </style>
     </head>
     <body>
-        <img height="320px" class="img" src="assets/billi2.jpg">
+        <img height="320px" class="img" src="assets/billi2.jpg" />
     </body>
 </html>
