--- a/Assignment/13FormFinal.html
+++ b/Assignment/13FormFinal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <title>NM Developers</title>
         <style>
             .center {
@@ -10,40 +10,43 @@
             }
         </style>
     </head>
-    
+
     <body>
-        <body style="background-color:rgb(1, 255, 255);"></body>
-        <h2 align="center">Visitor Feedback</h2> 
-        <br>
-        <hr width="50%" color="red">
-        <label>Your Name:
-            <input name="name" type="text" size="25">
+        <body style="background-color: rgb(1, 255, 255)"></body>
+        <h2 align="center">Visitor Feedback</h2>
+        <br />
+        <hr width="50%" color="red" />
+        <label
+            >Your Name:
+            <input name="name" type="text" size="25" />
         </label>
-        <br>
-        <br>
-        <label>Your E-mail Address:
-            <input email="email" type="text" size="25">
+        <br />
+        <br />
+        <label
+            >Your E-mail Address:
+            <input email="email" type="text" size="25" />
         </label>
-        <br>
-        <br>
+        <br />
+        <br />
         <label for="location">Select Your location:</label>
         <select name="your location" id="ok">
-          <option value="us">United States</option>
-          <option value="un">Monaco</option>
-          <option value="jamaica">Jamaica</option>
-          <option value="canada">Canada</option>
+            <option value="us">United States</option>
+            <option value="un">Monaco</option>
+            <option value="jamaica">Jamaica</option>
+            <option value="canada">Canada</option>
         </select>
- <br>
- <br>
- <label> Comments: <br>
-<textarea name="comments" rows="4" cols="36"></textarea>
-</label>
-<br>
-<br>
+        <br />
+        <br />
+        <label>
+            Comments: <br />
+            <textarea name="comments" rows="4" cols="36"></textarea>
+        </label>
+        <br />
+        <br />
 
-<div class="center">
-    <input type="submit" value="Submit Details">
-</div>
-<hr width="50%" color="red">
+        <div class="center">
+            <input type="submit" value="Submit Details" />
+        </div>
+        <hr width="50%" color="red" />
     </body>
 </html>
