--- a/Assignment/15Layout4.html
+++ b/Assignment/15Layout4.html
@@ -1,101 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Page Layout</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
 
-<head>
-    <meta charset="UTF-8">
-    <title>Page Layout</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
+            .heading {
+                font-size: 40px;
+                color: green;
+            }
 
-        .heading {
-            font-size: 40px;
-            color: green;
-        }
+            .sub-heading {
+                margin-left: 10px;
+            }
 
-        .sub-heading {
-            margin-left: 10px;
-        }
+            .topnav {
+                margin-top: 15px;
+                background-color: green;
+                padding: 10px 0;
+                overflow: hidden;
+            }
 
-        .topnav {
-            margin-top: 15px;
-            background-color: green;
-            padding: 10px 0;
-            overflow: hidden;
-        }
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 22px;
+            }
 
-        .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 22px;
-        }
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
 
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+            .topnav a.split {
+                float: right;
+            }
 
-        .topnav a.split {
-            float: right;
-        }
+            .content {
+                position: relative;
+                margin-top: 20px;
+            }
 
-        .content {
-            position: relative;
-            margin-top: 20px;
-        }
+            .content ul,
+            li {
+                list-style: none;
+                padding-left: 20px;
+            }
 
-        .content ul,
-        li {
-            list-style: none;
-            padding-left: 20px;
-        }
+            .footer {
+                padding: 100px 0;
+                font-size: 30px;
+                position: absolute;
+                width: 100%;
+                bottom: 0;
+                color: white;
+                background-color: black;
+            }
+        </style>
+    </head>
 
-        .footer {
-            padding: 100px 0;
-            font-size: 30px;
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-            color: white;
-            background-color: black;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="heading">NM Developers</div>
-    <div class="sub-heading">A multi-national business</div>
-    <div class="topnav">
-        <a href="#">HOME</a>
-        <a href="#">PRODUCTS</a>
-        <a href="#">DEADLINES</a>
-        <a href="#" class="split">LOGIN</a>
-    </div>
-    <div class="content">
-        <ul>
-            <li>Widget
-                <ul>
-                    <li>Provided in three sizes: small, medium, large and range of colors.</li>
-                </ul>
-            </li>
-            <li>Games
-                <ul>
-                    <li>Just what every home needs. Now available in more varied ways for the new season</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div class="footer">
-        <ol style="list-style-type:lower-alpha">
-            <li>a. Place your orders before 4:00 p.m. for next day delivery</li>
-            <li>b. Order by midnight for next New Year</li>
-        </ol>
-    </div>
-</body>
-
+    <body>
+        <div class="heading">NM Developers</div>
+        <div class="sub-heading">A multi-national business</div>
+        <div class="topnav">
+            <a href="#">HOME</a>
+            <a href="#">PRODUCTS</a>
+            <a href="#">DEADLINES</a>
+            <a href="#" class="split">LOGIN</a>
+        </div>
+        <div class="content">
+            <ul>
+                <li>
+                    Widget
+                    <ul>
+                        <li>
+                            Provided in three sizes: small, medium, large and
+                            range of colors.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Games
+                    <ul>
+                        <li>
+                            Just what every home needs. Now available in more
+                            varied ways for the new season
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="footer">
+            <ol style="list-style-type: lower-alpha">
+                <li>
+                    a. Place your orders before 4:00 p.m. for next day delivery
+                </li>
+                <li>b. Order by midnight for next New Year</li>
+            </ol>
+        </div>
+    </body>
 </html>
