--- a/JS(basic).html
+++ b/JS(basic).html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
             document.writeln("<h1>Welcome</h1>");
-        window.alert("Welcome to \n JavaScript Programming!");
-        var name;
-        name = window.prompt("Please enter your name");
-        document.writeln("<h1>Hello "+ name + ", welcome to JavaScript programming!</h1>");
+            window.alert("Welcome to \n JavaScript Programming!");
+            var name;
+            name = window.prompt("Please enter your name");
+            document.writeln(
+                "<h1>Hello " +
+                    name +
+                    ", welcome to JavaScript programming!</h1>"
+            );
         </script>
     </head>
     <body></body>
