--- a/JS(greeting).html
+++ b/JS(greeting).html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
-        var name, now = new Date(), hour = now.getHours();
+            var name,
+                now = new Date(),
+                hour = now.getHours();
 
-        name = window.prompt("Enter name");
+            name = window.prompt("Enter name");
 
-        if (hour<12)
-        document.write("<h1>Good Morning</h1>");
-        if (hour>=12){
-            hour = hour -12;
+            if (hour < 12) document.write("<h1>Good Morning</h1>");
+            if (hour >= 12) {
+                hour = hour - 12;
 
-            if(hour<6)
-            document.write("<h1>Good Afternoon");
+                if (hour < 6) document.write("<h1>Good Afternoon");
 
-            if (hour>=6)
-            document.write("<h1>Good Evening</h1>");
-        }
+                if (hour >= 6) document.write("<h1>Good Evening</h1>");
+            }
 
-        document.writeln(name);
+            document.writeln(name);
         </script>
     </head>
     <body></body>
