--- a/JS_math_function.html
+++ b/JS_math_function.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">4-098
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        4-098
         <script type="text/javascript">
             var value;
-            for(var i=1; i<=10;i++)
-            {
-                value=Math.floor(1+ Math.random()*6);
+            for (var i = 1; i <= 10; i++) {
+                value = Math.floor(1 + Math.random() * 6);
                 document.writeln(value);
             }
         </script>
