--- a/JS_table_loop.html
+++ b/JS_table_loop.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Javascript</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script type="text/javascript">
             document.writeln("<table>");
-            for(var row = 1; row <= 10; row++) {
+            for (var row = 1; row <= 10; row++) {
                 document.writeln("<tr>");
-                for(var col = 1; col <= 5; col++) {
+                for (var col = 1; col <= 5; col++) {
                     document.writeln("<td>(" + row + "," + col + ")</td>");
                 }
                 document.writeln("</tr>");
